# phan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/app1/: CMakeLists.txt  app_2_.hpp
apps/app2/: CMakeLists.txt  app.cpp
apps/phan_app/: CMakeLists.txt  app.hpp.in  main.cp  main.cpp
apps/phan_app/include/: comment.hpp  compiletime.hpp  declare.hpp  extractor.hpp  main.hpp  paste.hpp  phime.hpp  test.hpp  trio.hpp
apps/phan_app/src/: main.cpp  test.cpp
cmake/: CMakeLists.txt  functions.cmake  libs.cmake  phanConfig.cmake.in  template_libraryConfig.cmake.in
docs/: mainpage.md
include/: in.hpp  version.hpp
include/phan/: in.hpp  phan.hpp
include/template_library/: template_library.hpp
src/: CMakeLists.txt  phan.cpp  template_library.cpp
src/generators/: CMakeLists.txt
src/generators/generatorA/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: testlib.cpp
tests/test_phan_app/: CMakeLists.txt
tests/test_phan_app/src/: test_phan_app.cpp  with_files.cpp
tests/test_phan_app/testFiles_facit/: 1.hpp  5.hpp  a.hpp  decl.hpp  pastedecl.hpp
tests/test_phan_app/testFiles_post/: 0.hpp  1  1.hpp  10.hpp  4.hpp  5.hpp  b.hpp  c.hpp  comment.hpp  decl.hpp  declpaste.hpp  paste.hpp  pastedecl.hpp  test0.hpp  test1.hpp
tests/test_phan_app/testFiles_pre/: 1.hpp  2.hpp  4.hpp  5.hpp  a.hpp  comment.hpp  decl.hpp  declpaste.hpp  paste.hpp  test0.hpp  test1.hpp
tests/test_phan_app/testFolders_post/philip/angela är kåt och vill ha snopp/: main.cpp
tests/test_phan_app/testFolders_post/philips bibliotek/: CMakeLists.txt
tests/test_phan_app/testFolders_post/philips bibliotek/angela är kåt och vill ha snopp/: main.cpp
tests/test_phan_app/testFolders_pre/$(root){philip}/: hej.ph
tests/test_phan_app/testFolders_pre/&(root){philips bibliotek}/: CMakeLists.txt  hej.ph
tests/test_phan_app/testFolders_pre/&(root){philips bibliotek}/&{angela}/: main.cpp
tests/test_phan_lib/: CMakeLists.txt
tests/test_phan_lib/src/: test_phan_lib.cpp
xbuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  PhanConfigVersion.cmake  cmake_install.cmake
xbuild/CMakeScripts/: ReRunCMake.make
xbuild/Phan.build/Debug/ZERO_CHECK.build/: Script-CBDFEAAEADD63B56FDE42167.sh
xbuild/Phan.xcodeproj/: project.pbxproj
xbuild/Phan.xcodeproj/project.xcworkspace/xcuserdata/philipwenkel.xcuserdatad/: UserInterfaceState.xcuserstate
xbuild/Phan.xcodeproj/xcuserdata/philipwenkel.xcuserdatad/xcschemes/: xcschememanagement.plist
xbuild/apps/: CTestTestfile.cmake  cmake_install.cmake
xbuild/apps/app1/: CTestTestfile.cmake  app.hpp  app_2.hpp  cmake_install.cmake
xbuild/apps/app1/Phan.build/Debug/app1.build/Objects-normal/x86_64/: app1.LinkFileList
xbuild/apps/app1/SharedPrecompiledHeaders/SharedPrecompiledHeaders/14369224033503375146/: cmake_pch.hxx.dia
xbuild/apps/app2/: CTestTestfile.cmake  cmake_install.cmake
xbuild/include/: version.hpp
xbuild/src/: CTestTestfile.cmake  cmake_install.cmake
xbuild/src/Phan.build/Debug/Phan.build/Objects-normal/x86_64/: Phan.LinkFileList  phan.dia  template_library.dia
xbuild/tests/: CTestTestfile.cmake  cmake_install.cmake
